[gd_scene load_steps=2 format=3 uid="uid://kslruewhwtbf"]

[ext_resource type="Script" uid="uid://dyyusouk87w3" path="res://scripts/widgets/settings_widget.gd" id="1_fq8w1"]

[node name="SettingsWidget" type="VBoxContainer"]
offset_right = 783.0
offset_bottom = 455.0
script = ExtResource("1_fq8w1")
metadata/_tab_index = 3

[node name="FoldableContainer" type="FoldableContainer" parent="."]
layout_mode = 2
folded = true
title = "Secret Rabbit"

[node name="VBoxContainer" type="VBoxContainer" parent="FoldableContainer"]
visible = false
layout_mode = 2

[node name="RabbitSettings" type="GridContainer" parent="FoldableContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="URLLabel" type="Label" parent="FoldableContainer/VBoxContainer/RabbitSettings"]
layout_mode = 2
text = "Addres: "
horizontal_alignment = 2

[node name="URLLineEdit" type="LineEdit" parent="FoldableContainer/VBoxContainer/RabbitSettings"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Leave blank to use defaults"

[node name="PortLabel" type="Label" parent="FoldableContainer/VBoxContainer/RabbitSettings"]
layout_mode = 2
text = "Port: "
horizontal_alignment = 2

[node name="PortLineEdit" type="LineEdit" parent="FoldableContainer/VBoxContainer/RabbitSettings"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Leave blank to use defaults"

[node name="UsernameLabel" type="Label" parent="FoldableContainer/VBoxContainer/RabbitSettings"]
layout_mode = 2
text = "Username: "
horizontal_alignment = 2

[node name="UsernameLineEdit" type="LineEdit" parent="FoldableContainer/VBoxContainer/RabbitSettings"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Leave blank to use defaults"

[node name="PasswordLabel" type="Label" parent="FoldableContainer/VBoxContainer/RabbitSettings"]
layout_mode = 2
text = "Password: "
horizontal_alignment = 2

[node name="PasswordLineEdit" type="LineEdit" parent="FoldableContainer/VBoxContainer/RabbitSettings"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Leave blank to use defaults"

[node name="VirtualHostLabel" type="Label" parent="FoldableContainer/VBoxContainer/RabbitSettings"]
layout_mode = 2
text = "Virtual Host: "
horizontal_alignment = 2

[node name="VirtualHostLineEdit" type="LineEdit" parent="FoldableContainer/VBoxContainer/RabbitSettings"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Leave blank to use defaults"

[node name="ApplyButton" type="Button" parent="FoldableContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Apply"

[connection signal="pressed" from="FoldableContainer/VBoxContainer/ApplyButton" to="." method="_on_apply_button_pressed"]
